--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <title>Hello World!!! Git Test is on</title>
   </head>
   <body>
-   <H1>Hello</H1>
+   <div class="header">
+    <H1>Hello</H1>
+   <p>This is a new paragraph</p>
+   </div>
+   <div class"menu">
+    <ul>
+     <li>One</li>
+     <li>Two</li>
+     <li>Three</li>
+    </ul>
+   </div>
   </body>
 </html>
