Added header section to about.html

--- a/about.html
+++ b/about.html
@@ -3,6 +3,14 @@
     <title>About us!!!</title>
   </head>
   <body>
+    <div class="header">  
+      <ul>
+        <li>Main</li>
+        <li>About</li>
+        <li>Contact Us</li>
+      </ul>
+    </div>
     <p>This is about page</p>
+    
   </body>
 </html>
